# prosper0

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  opencode.md  pyproject.toml
bridge/: README.md
console/: Prosper0 Operator Console.html  styles.css
console/src/: app.jsx  atoms.jsx  audit.jsx  chat.jsx  data.jsx  footer.jsx  header.jsx  stack.jsx  tweaks.jsx
deploy/: Dockerfile  README.md  docker-compose.yml  pull-model.sh
docs/plans/: 2026-04-21-desktop-gpu-setup.md  2026-04-21-preview-pane.md
instances/marlin/: docker-compose.yml  tools.config.yaml
spec/: 2026-04-19-enforcement-layer-design.md  2026-04-20-enforcement-layer-plan.md  architecture.md  lmf-adr-003.md  mvp-roadmap.md  prosper0-adr-001.md  prosper0-adr-002-enforcement-middleware-chain.md  prosper0-adr-003-ed25519-employer-signed-config.md  prosper0-adr-004-self-certification-transfers.md  prosper0-adr-005-fail-closed-enforcement.md  prosper0-adr-006-model-selection.md  prosper0-adr-007-inference-runtime.md  prosper0-adr-008-orchestrator-design.md
stack/: README.md  tools.config.yaml
stack/api/: __init__.py  server.py  streaming_gate.py
stack/mcp/: definitions.py  registry.py
stack/orchestrator/: backend.py  config.py  loop.py  main.py  ollama.py  prompt.py
tests/: README.md  test_integration.py
tests/mcp/: test_list_directory.py  test_read_file.py  test_search_files.py  test_write_file.py
tests/orchestrator/: test_backend.py  test_loop.py  test_ollama.py  test_prompt.py
tests/smoke/: test_live.py
transparency/: README.md
vault/: README.md
(+28 files in other folders)
